added security prop

--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -36,5 +36,17 @@ info.build.version=@project.version@
 #security
 security.user.name=shantonu
 security.user.password=123456
+security.user.role=USER
+
+
+security.enable-csrf=false
+security.headers.xss=false
+security.headers.hsts=none # HTTP Strict Transport Security (HSTS) mode (none, domain, all).
+
+security.headers.cache=true
+security.headers.content-type=true
+
+security.sessions=stateless # Session creation policy (always, never, if_required, stateless).
+
 
 server.port=9100
