--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -41,12 +41,14 @@ security.user.role=USER
 
 security.enable-csrf=false
 security.headers.xss=false
-security.headers.hsts=none # HTTP Strict Transport Security (HSTS) mode (none, domain, all).
+security.headers.hsts=none
+# HTTP Strict Transport Security (HSTS) mode (none, domain, all).
 
 security.headers.cache=true
 security.headers.content-type=true
 
-security.sessions=stateless # Session creation policy (always, never, if_required, stateless).
+security.sessions=stateless
+# Session creation policy (always, never, if_required, stateless).
 
 
 server.port=9100
