--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
         <testSuit>org.automation.bug.ws.RegressionTests.class</testSuit>
+        <junit.jupiter.version>5.6.2</junit.jupiter.version>
     </properties>
     <dependencies>
         <dependency>
@@ -53,6 +54,11 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>30.1.1-jre</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-runner</artifactId>
+            <version>${junit-platform.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
