--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <java.version>1.8</java.version>
         <testSuit>org.automation.bug.ws.RegressionTests.class</testSuit>
         <junit.jupiter.version>5.6.2</junit.jupiter.version>
+        <junit-platform.version>1.7.1</junit-platform.version>
     </properties>
     <dependencies>
         <dependency>
