--- a/pom.xml
+++ b/pom.xml
@@ -81,9 +81,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <configuration>
-                    <includes>
+<!--                    <includes>
                         ${testSuit}
-                    </includes>
+                    </includes>-->
                 </configuration>
             </plugin>
             <plugin>
