--- a/pom.xml
+++ b/pom.xml
@@ -79,11 +79,14 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
                 <configuration>
-<!--                    <includes>
+                    <includes>
                         ${testSuit}
-                    </includes>-->
+                    </includes>
+                    <skipTests>true</skipTests>
+
                 </configuration>
             </plugin>
             <plugin>
