--- a/bug-store/pom.xml
+++ b/bug-store/pom.xml
@@ -28,7 +28,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context-support</artifactId>
-            <version>4.1.8.RELEASE</version>
+          <!--  <version>4.1.8.RELEASE</version>-->
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
