--- a/bug-store/pom.xml
+++ b/bug-store/pom.xml
@@ -17,7 +17,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
         <testSuit>org.automation.bug.RegressionTests.class</testSuit>
-        <junit.jupiter.version>5.6.2</junit.jupiter.version>
+        <junit.jupiter.version>5.8.2</junit.jupiter.version>
         <junit-platform.version>1.7.1</junit-platform.version>
     </properties>
     <dependencies>
@@ -65,12 +65,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
-            <exclusions>
+          <!--  <exclusions>
                 <exclusion>
                     <groupId>junit</groupId>
                     <artifactId>junit</artifactId>
                 </exclusion>
-            </exclusions>
+            </exclusions>-->
             <scope>test</scope>
         </dependency>
     </dependencies>
