--- a/bug-store/pom.xml
+++ b/bug-store/pom.xml
@@ -17,7 +17,7 @@
         <java.version>21</java.version>
         <testSuit>RegressionTestSuite.class</testSuit>
         <junit.jupiter.version>5.12.2</junit.jupiter.version>
-        <junit-platform.version>1.7.1</junit-platform.version>
+        <junit-platform.version>1.13.1</junit-platform.version>
     </properties>
     <dependencies>
         <dependency>
@@ -64,50 +64,56 @@
                     <groupId>junit</groupId>
                     <artifactId>junit</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>org.junit.vintage</groupId>
+                    <artifactId>junit-vintage-engine</artifactId>
+                </exclusion>
             </exclusions>
             <scope>test</scope>
         </dependency>
-<!--        <dependency>
+        <!--<dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
             <version>5.12.2</version>
             <scope>test</scope>
         </dependency>-->
-        <dependency>
+        <!--<dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-params</artifactId>
             <version>${junit.jupiter.version}</version>
-        </dependency>
-        <dependency>
+        </dependency>-->
+
+        <!--<dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
             <version>${junit.jupiter.version}</version>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>${junit.jupiter.version}</version>
         </dependency>
+
         <dependency>
             <groupId>org.junit.platform</groupId>
-            <artifactId>junit-platform-launcher</artifactId>
+            <artifactId>junit-platform-suite-api</artifactId>
             <version>${junit-platform.version}</version>
         </dependency>
-        <dependency>
+       <!-- <dependency>
             <groupId>org.junit.platform</groupId>
             <artifactId>junit-platform-runner</artifactId>
             <version>${junit-platform.version}</version>
-        </dependency>
-        <dependency>
+        </dependency>-->
+        <!--<dependency>
             <groupId>org.junit.platform</groupId>
             <artifactId>junit-platform-commons</artifactId>
             <version>${junit-platform.version}</version>
-        </dependency>
-        <dependency>
+        </dependency>-->
+<!--        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-migrationsupport</artifactId>
             <version>${junit.jupiter.version}</version>
-        </dependency>
+        </dependency>-->
     </dependencies>
 
     <build>
