--- a/bug-store/pom.xml
+++ b/bug-store/pom.xml
@@ -18,8 +18,19 @@
         <testSuit>RegressionTestSuite.class</testSuit>
         <junit.jupiter.version>5.12.2</junit.jupiter.version>
         <junit-platform.version>1.13.1</junit-platform.version>
+        <jmh.version>1.37</jmh.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-core</artifactId>
+            <version>${jmh.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-generator-annprocess</artifactId>
+            <version>${jmh.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
@@ -143,10 +154,17 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.14.0</version>
-<!--                <configuration>
-                    <source>17</source>
-                    <target>17</target>
-                </configuration>-->
+                <configuration>
+                    <!--<source>17</source>
+                    <target>17</target>-->
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.openjdk.jmh</groupId>
+                            <artifactId>jmh-generator-annprocess</artifactId>
+                            <version>${jmh.version}</version>
+                        </path>
+                    </annotationProcessorPaths>
+                </configuration>
             </plugin>
         </plugins>
     </build>
