--- a/bug-store/pom.xml
+++ b/bug-store/pom.xml
@@ -136,6 +136,12 @@
             <artifactId>junit-jupiter-migrationsupport</artifactId>
             <version>${junit.jupiter.version}</version>
         </dependency>-->
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>5.5.6</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
