--- a/RestAssured/pom.xml
+++ b/RestAssured/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.automation</groupId>
     <artifactId>webservice-test</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1.1</version>
     <properties>
         <rest.assure.version>5.5.6</rest.assure.version>
     </properties>
